--- a/src/components/AboutSection/about-section.css
+++ b/src/components/AboutSection/about-section.css
@@ -1,10 +1,18 @@
 .aboutSection {
-    display: flex;
-    padding: 2.5rem;
-    line-height: 1.5;
-    background-color: #EFF2F4;
-    justify-content: space-between;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #EFF2F4;
+
+}
+
+.aboutSectionWrapper {
+    width: 100%;
+    max-width: 90%;
+    line-height: 1.5;
+    display: flex;
+    justify-content: space-between;
+align-items: center;
 }
 
 .about-section-imgCont {
